02_Deploy/07_argoimageupdater/applicationset/bgd-white/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bgd-white
  name: bgd-white
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: bgd-white
