02_Deploy/07_argoimageupdater/applicationset/bgd-white/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: bgd-white
  name: bgd-white
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bgd-white
    weight: 100
